Fix wrap issue on break-even table badge

--- a/src/pages/SalesToyota/SalesToyota.css
+++ b/src/pages/SalesToyota/SalesToyota.css
@@ -1279,6 +1279,8 @@
   text-transform: uppercase;
   letter-spacing: 0.5px;
   vertical-align: middle;
+  display: inline-block;
+  white-space: nowrap;
 }
 
 .text-green {
